--- a/styles/UserInfo.module.css
+++ b/styles/UserInfo.module.css
@@ -25,10 +25,11 @@
     }
     .createPracticeLink{
         min-width: 100px;
-        padding: 0 10px;
         height: 50px;
+        padding: 0 10px;
         border: none;
-        border-radius: 30px;background-color: #EFEFEF;
+        border-radius: 30px;
+        background-color: #EFEFEF;
         color: black;
         font-size: 16px;
         display: flex;
